--- a/spiel-zettel/src/app/components/SearchBar.module.css
+++ b/spiel-zettel/src/app/components/SearchBar.module.css
@@ -1,33 +1,42 @@
 /* Container for the text input */
 .inputContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  max-width: 100%;
-  border-radius: 5px;
-  padding: 1rem;
-  background-color: var(--theme_color);
-  transition: background-color var(--animation_time), border-radius var(--animation_time), padding var(--animation_time);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    border-radius: 5px;
+    padding: 1rem;
+    background-color: var(--theme_color);
+    transition: background-color var(--animation_time), border-radius var(--animation_time), padding var(--animation_time);
 }
 
 .inputContainer input {
-  width: 100%;
-  border: none;
-  outline: none;
-  padding: 0.5rem;
-  font-size: 1.25rem;
-  border-radius: 3px;
-  color: var(--background_color);
-  background-color: var(--theme_color);
-  box-sizing: border-box;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 0.5rem;
+    font-size: 1.25rem;
+    border-radius: 5px;
+    color: var(--background_color);
+    background-color: var(--theme_color);
+    box-sizing: border-box;
 }
 
-.inputContainer:hover, .inputContainer:focus-within {
-  background-color: var(--theme_color_dark);
+.inputContainer:hover,
+.inputContainer:focus-within {
+    background-color: var(--theme_color_dark);
 }
 
 .inputContainer input::placeholder {
-  color: var(--theme_color_light);
-  opacity: 0.7;
+    color: var(--theme_color_light);
+    opacity: 0.7;
+}
+
+/* Responsive Styles (var(--menus_max_width)=600px) */
+@media (max-width: 600px) {
+    .inputContainer {
+        /* On small screens remove border radius just like in the MainMenu */
+        border-radius: 0;
+    }
 }
